# TradEZ

./: .gitignore  Cargo.toml  README.md  build_kernel.sh  commands.txt  launch_kernel_debugger.sh  originate_rollup.sh  reset_sandbox_node.sh  sandbox_parameters.json  sandox_node.sh
crates/tradez-client/: Cargo.toml
crates/tradez-client/src/: main.rs  wallet.rs
crates/tradez-kernel/: Cargo.toml
crates/tradez-kernel/src/: account.rs  error.rs  inbox.rs  lib.rs  orderbook.rs
crates/tradez-octez/: Cargo.toml
crates/tradez-octez/src/: client.rs  error.rs  l1_node.rs  lib.rs  logging.rs  ports.rs  smart_rollup_installer.rs  smart_rollup_node.rs
crates/tradez-sequencer/: Cargo.toml
crates/tradez-sequencer/src/: host.rs  main.rs  server.rs
crates/tradez-tests/: Cargo.toml  accounts.json  log.txt  sandbox_parameters.json
crates/tradez-tests/src/: client.rs  lib.rs  main.rs  sequencer.rs  setup.rs
crates/tradez-types/: Cargo.toml
crates/tradez-types/src/: address.rs  api.rs  currencies.rs  error.rs  lib.rs  orderbook.rs  position.rs
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedBackground.tsx  Header.tsx  MyOrders.tsx  OrderBook.tsx  OrderForm.tsx  TradingChart.tsx
frontend/src/contexts/: MarketContext.tsx
frontend/src/hooks/: use-toast.ts  useBalances.ts  useTradezApi.ts  useWallet.tsx
frontend/src/lib/: address.ts
frontend/src/pages/: Index.tsx
