[workspace]
resolver = "3"
members = [
    "crates/tradez-client",
    "crates/tradez-kernel",
    "crates/tradez-octez",
    "crates/tradez-sequencer",
    "crates/tradez-tests",
    "crates/tradez-types",
]

[workspace.dependencies]
async-trait = "0.1.89"
tradez-octez = { package = "tradez-octez", path = "./crates/tradez-octez" }
tradez-types = { package = "tradez-types", path = "./crates/tradez-types" }
tradez-kernel = { package = "tradez-kernel", path = "./crates/tradez-kernel" }
tempfile = "3.23.0"
openport = "0.1.1"
bincode = { version = "2.0.1", features = ["serde"] }
alloy-signer-local = { version = "1.0.41", features = ["keystore"] }
alloy-primitives = { version = "1.2.0", default-features = false, features = ["rlp", "serde"] }
clap = { version = "4.5", features = ["derive"] }
nom = "7.1"
reqwest = { version = "0.12.24", features = ["json"] }
tezos_data_encoding = "0.5"
tezos-smart-rollup = { git = "https://gitlab.com/tezos/tezos.git", default-features = false, features = [
  "std",
  "crypto",
  "dlmalloc",
  "panic-hook",
  "data-encoding",
  "storage",
  "testing",
] }
tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos.git" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee = { version = "0.26.0", features = ["server", "http-client", "macros"] }
rlp = { version = "0.6.1", features = ["derive"] }
hex = "0.4"
rand = "0.8"
thiserror = "2.0.17"
redb = "3.1.0"