[package]
name = "tradez-kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = {workspace = true, features = ["k256"] }
tezos-smart-rollup.workspace = true
tezos-smart-rollup-host.workspace = true
tezos_data_encoding.workspace = true
thiserror.workspace = true
nom.workspace = true
tradez-types = { workspace = true}
rlp.workspace = true

[dev-dependencies]
tezos-smart-rollup.workspace = true