[package]
name = "tradez-sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
jsonrpc-derive.workspace = true
hex.workspace = true
tradez-types.workspace = true
tradez-kernel.workspace = true