[package]
name = "tradez-sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpsee.workspace = true
hex.workspace = true
tradez-types.workspace = true
tradez-kernel.workspace = true
tradez-octez.workspace = true
tezos-smart-rollup.workspace = true
tezos-smart-rollup-host.workspace = true
rlp.workspace = true
async-trait = "0.1.89"