[package]
name = "tradez-types"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
rlp.workspace = true
jsonrpsee = { workspace = true, optional = true }
tezos-smart-rollup.workspace = true
tezos-smart-rollup-host.workspace = true
thiserror.workspace = true

[features]
default = []
api = ["jsonrpsee"]